Added user resource to manage columns
